# pushapp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/: CODEOWNERS
.github/workflows/: build.yaml  release.yml
src/: args.rs  fs_utils.rs  main.rs  package_info.rs  package_json.rs  package_lock.rs  registry.rs  updater.rs
src/cli/: args.rs  flags.rs  fs_utils.rs  mod.rs  package_info.rs  package_json.rs  package_manager.rs  prompt.rs  registry.rs  updater.rs
src/cli/registry/: client.rs  errors.rs  mod.rs  options.rs  version_target.rs
src/cli/versions/: dist_tags.rs  matching.rs  mod.rs  utils.rs  version_target.rs
src/utils/: fs.rs  hashmap.rs  mod.rs
