[package]
name = "pushapp-cli"
version = "1.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flaviodelgrosso/pushapp"
authors = ["Flavio Del Grosso"]
description = "Ultra fast dependencies updater for Node.js"

[[bin]]
name = "pushapp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.30"
inquire = "0.7.5"
reqwest = { version = "0.12.7", features = ["json"] }
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
async-trait = "0.1.83"
mockall = "0.13.0"
tempfile = "3.13.0"
